TAG: assemblyseqload-3-5-3-2
DATE: 05/16/2007
STAFF: sc
CHANGES: TR8304 ensembl load
1) updated configuration
2) fixed Install script

TAG: assemblyseqload-3-5-3-1
DATE: 05/01/2007
STAFF: sc
CHANGES: TR8191 vega load

TAG: assemblyseqload-3-5-1-4
DATE: 10/24/2006
STAFF: lec
CHANGES: merge tr7894 branch

TAG: assemblyseqload-tr7894-4
DATE: 10/16/2006
STAFF: sc
CHANGES: Added assoc load config files

TAG: assemblyseqload-tr7894-3
TAG: assemblyseqload-tr7894-2
DATE: 10/06/2006
STAFF: sc
CHANGES:
1) updated to use assocload (rather than genaccload)
2) removed genaccload.sh and replaced with run_assocload.sh
3) added vega, ensembl, ncbi assocload config files
4) added creation of the three sets of assocload output directories
5) *_assemblyseqload.config - added ASSOCFILE, CONFIG_ASSOCLOAD, ASSOCLOADER_SH

TAG: assemblyseqload-3-5-1-3
TAG: assemblyseqload-3-5-1-2
DATE: 09/22/2006
STAFF: lec
1) build 36; merge

TAG: assemblyseqload-tr7894-1
DATE: 09/13/2006
STAFF: sc
CHANGES:
1) updated to use mgiconfig product

TAG: assemblyseqload-tr7894-BP
DATE: 09/12/2006
STAFF: sc
CHANGES: branch point tag for tr7894, mgiconfig update

TAG: assemblyseqload-3-5-1-1
DATE: 09/06/2006
STAFF: lec
1) build 36; merge

TAG: assemblyseqload-build36-2
DATE: 08/17/2006
STAFF: lec
1) build 36

TAG: assemblyseqload-build36-1
DATE: 07/27/2006
STAFF: lec
1) build 36

TAG: assemblyseqload-build36-BP
DATE: 07/19/2006
STAFF: lec
1) branch point tag for build 36

TAG: assemblyseqload-1-0-9
DATE: 12-06-2004
STAFF: sc
RELEASE: dev 3.1
CHANGES: tr6336
1) assemblyseqloadcron.sh - added sourcing of common.config.sh because of
   factoring out USRLOCALMGI
2) assemblyseqloadcron.sh - added call to seqcacheload seqdescription.csh
3) assemblyseqloadcron.sh - added checking STAT of each script run.
4) assembly_common.config.default - added SEQ_MARKER_DESCRIPT_CACHELOAD

TAG: assemblyseqload-1-0-8
DATE: 11-22-2004
STAFF: sc
RELEASE: dev 3.1
CHANGES: tr6336