@@ -11,6 +11,11 @@
 # 3) SEQ_RELEASE_DATE
 # 4) SEQ_RELEASE_NO
 # 5) COORD_VERSION
+# default is false for the following
+# 1) load associations (ASSOC_JNUMBER) - egload loads associations
+# 2) load sequence coordinate cache table (OK_LOAD_SEQ_CACHE_TABLES)
+# 3) load marker cache tables (OK_LOAD_MRK_CACHE_TABLES) - no need to load
+#    since we aren't loading associations
 ###########################################################################
 
 ###########################################################################
@@ -69,17 +74,25 @@ SEQ_QUALITY=High
 # jnumber
 SEQ_JNUMBER=J:90438
 
+export SEQ_VIRTUAL SEQ_TYPE SEQ_QUALITY SEQ_JNUMBER
+
 # The flavor of assocload we are running
 ASSOCLOADER_SH=${ASSOCLOAD}/bin/AssocLoad2.sh
  
-export ASSOCLOADER_SH
-
 # jnumber for the accession association load
 # note that these associations are done via the EntrezGene load, so we set the J: to 0
 ASSOC_JNUMBER=0
 ASSOC_OBJECTTYPE=Marker
 
-export SEQ_VIRTUAL SEQ_TYPE SEQ_QUALITY SEQ_JNUMBER ASSOC_JNUMBER ASSOC_OBJECTTYPE
+export ASSOCLOADER_SH ASSOC_JNUMBER ASSOC_OBJECTTYPE
+
+# load the sequence coordinate cache table?
+OK_LOAD_SEQ_CACHE_TABLES=false
+
+# We don't load associations so don't want to load cache tables
+OK_LOAD_MRK_CACHE_TABLES=false
+
+export OK_LOAD_SEQ_CACHE_TABLES OK_LOAD_MRK_CACHE_TABLES
 
 # source information
 SEQ_ORGANISM="mouse, laboratory"
