@@ -11,6 +11,11 @@
 # 3) SEQ_RELEASE_DATE
 # 4) SEQ_RELEASE_NO
 # 5) COORD_VERSION
+# default is true for the following
+# 1) load associations (ASSOC_JNUMBER) - may want to make false during testing
+# default is false for the following - may want to make true during testing
+# 1) load sequence coordinate cache table (OK_LOAD_SEQ_CACHE_TABLES)
+# 2) load marker cache tables (OK_LOAD_MRK_CACHE_TABLES)
 ###########################################################################
 
 ###########################################################################
@@ -69,16 +74,25 @@ SEQ_QUALITY=High
 # jnumber
 SEQ_JNUMBER=J:109762
 
+export SEQ_VIRTUAL SEQ_TYPE SEQ_QUALITY SEQ_JNUMBER
+
 # The flavor of assocload we are running
 ASSOCLOADER_SH=${ASSOCLOAD}/bin/AssocLoad2.sh
 
-export ASSOCLOADER_SH
-
 # jnumber for the accession association load
 ASSOC_JNUMBER=J:109762
+
 ASSOC_OBJECTTYPE=Marker
 
-export SEQ_VIRTUAL SEQ_TYPE SEQ_QUALITY SEQ_JNUMBER ASSOC_JNUMBER ASSOC_OBJECTTYPE
+export ASSOCLOADER_SH ASSOC_JNUMBER ASSOC_OBJECTTYPE
+
+# load the sequence coordinate cache table?
+OK_LOAD_SEQ_CACHE_TABLES=false
+
+# Load marker cache tables? If true, only loads if we load associations
+OK_LOAD_MRK_CACHE_TABLES=false
+
+export OK_LOAD_SEQ_CACHE_TABLES OK_LOAD_MRK_CACHE_TABLES
 
 # source information
 SEQ_ORGANISM="mouse, laboratory"
@@ -150,17 +164,6 @@ export COORD_COLLECTION_NAME COORD_COLLECTION_ABBREV COORD_FEATURE_MGITYPE
 COORD_REPEAT_FILE=${OUTPUTDIR}/coordrepeats.out
 
 export COORD_REPEAT_FILE
-
-############################################################################
-#
-# vega assemblycacheload settings
-#
-###########################################################################
-
-# name of the vega config file for assemblycacheload
-ASSEMBLY_CACHELOAD_CONFIG=vega.config
-
-export ASSEMBLY_CACHELOAD_CONFIG
 
 ###########################################################################
 #
